@@ -4,6 +4,9 @@ This file tracks the changes to Wing over time. Especially
 with respect to new features and compatibility changes.
 ==========================================================
 
+2022-05-03
+ * Handle badly formed JSON Firebase messages gracefully.
+
 2022-02-27
  * Fixed a problem where if creation params were 0 or empty string and that was a valid value creation would fail.
 
